# TRIZ-Agent

./: .env.example  .gitignore  FS - Hardware Architecture - Overview.md  Field_Shield_Rejected_Concepts_Catalog.docx  README.md  pyproject.toml  requirements.txt  triz-agents-analysis.md  triz-agents-field-shield-architecture.mermaid
.github/workflows/: ci.yml
data/: gantry_crane_problem.txt
examples/: run_minimal.py
field-shield-triz/: AGENT_TEAM_ARCHITECTURE.md  SKILL.md
field-shield-triz/field_shield_context/: hard_constraints.md  known_contradictions.md  system_overview.md
field-shield-triz/prompts/: agtech_domain_expert.md  control_systems_engineer.md  cost_analyst.md  documentation_specialist.md  electrical_engineer.md  embedded_systems_architect.md  final_report_maker.md  mechanical_engineer.md  operations_specialist.md  project_manager.md  safety_engineer.md  thermal_management_engineer.md  triz_specialist.md  validation_engineer.md
field-shield-triz/research/: behavioral_science_report.md  biomimicry_natural_deterrence_report.md
field-shield-triz/templates/: innovation_report_template.md  ip_documentation_template.md
field-shield-triz/tools/: constraint_validator.py  triz_toolkit.py
notebooks/: TRIZ_team_10_POST_PUB.ipynb  quickstart.ipynb
notebooks/experiments_results/: gpt-4o_gantry_20250923-095039.md  gpt-4o_thread-gantry-quickstart-01_20250923-095039.json
notebooks/gpt-4o-single_run_result/: CECA_Gantry_Crane_System.md  TRIZ_Gantry_Crane_Step1_Defining_Engineering_System.md  engineering_contradictions_and_inventive_principles.md  (+4 more)
(+37 files in other folders)
