[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "triz-agents"
version = "0.1.0"
description = "TRIZ-based multi-agent LLM system."
authors = [{name="Kamil Szczepanik"},]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.2",
    "langgraph>=0.2",
    "langchain-openai>=0.2",
    "langchain-community>=0.2",
    "langchain-text-splitters>=0.2",
    "pydantic>=2",
    "pandas>=2",
    "numpy>=1.26",
    "matplotlib>=3.8"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
triz_agents = ["../data/triz/*.json"]
